--- a/head.html
+++ b/head.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<!-- Following is for Streamx-->
+<!-- Following is for StreamX-->
 <meta charset="UTF-8">
 <meta name="google-site-verification" content="XIRTM7HiEKtqf_L6gBM37DY1SG50rAD6pdaLIjWQds8" />
 <script src="/scripts/aem.js" type="module"></script>
